--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <hr>
     <section class="skills" id="technologies">
         <h2>
-            SKILLS
+            My Skills
         </h2>
         <P>
             THE SKILLS AND TECHNOLOGIES I USE:
