--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             SKILLS
         </h2>
         <P>
-            THE SKILLS AND TECHNOLOGIES I USE:
+            THE SKILLS AND TECHNOLOGIES I USE DAILY:
         </P>
         <div class="sicons">
             <img src="/assets/images/html.png" alt="">
